Fixed bug of svgtinker header scrolling out of postion on mobile view. It now will stay in place.

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,7 +2,9 @@
   background-color: black;
   width:100vw;
   height:3vh;
-  
+  overflow: hidden;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0;
   // border:purple solid 1pt;
   // position:fixed;
   div{
